--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Gitignore for latex and matlab/simulink
+
+# LATEX GITIGNORE:
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -282,3 +285,37 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+
+# MATLAB / SIMULINK GITIGNORE
+# Windows default autosave extension
+*.asv
+
+# OSX / *nix default autosave extension
+*.m~
+
+# Compiled MEX binaries (all platforms)
+*.mex*
+
+# Packaged app and toolbox files
+*.mlappinstall
+*.mltbx
+
+# Generated helpsearch folders
+helpsearch*/
+
+# Simulink code generation folders
+slprj/
+sccprj/
+
+# Matlab code generation folders
+codegen/
+
+# Simulink autosave extension
+*.autosave
+
+# Simulink cache files
+*.slxc
+
+# Octave session info
+octave-workspace
